# c-cpp-demo

./: .dockerignore  .gitignore  CMakeLists.txt  CMakeUserPresets.json  Dockerfile  README.md  cifuzz.yaml
.github/workflows/: main.yml
lib/: base64.cpp  base64.h
src/: heap_buffer_overflow.cpp  heap_buffer_overflow.h  heap_buffer_overflow_test.cpp  stack_buffer_overflow.cpp  stack_buffer_overflow_test.cpp  use_after_free.cpp  use_after_free.h  use_after_free_test.cpp
